# jabbar

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-16-jabbar-implementation.md
docs/superpowers/specs/: 2026-04-16-analyze-bills-design.md
src/: config.py  main.py
src/analyze/: claude_analyzer.py
src/auth/: imap_auth.py  oauth2_auth.py
src/extract/: llm_extractor.py
src/fetch/: email_fetcher.py
src/ingest/: csv_ingest.py
src/preprocess/: html_stripper.py
src/tui/: app.py
src/tui/widgets/: charts.py
tests/: test_claude_analyzer.py  test_config.py  test_csv_ingest.py  test_email_fetcher.py  test_html_stripper.py  test_imap_auth.py  test_integration.py  test_llm_extractor.py  test_main.py  test_merchants.py  test_oauth2_auth.py  test_tags.py  test_tui.py
