[project]
name = "jabbar"
version = "0.1.0"
description = "Email Financial Intelligence"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "textual-plotext>=1.0.0",
    "plotext>=5.3.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false
